--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ projects:
     forks: true
 
 social_media:
-  linkedin: https://www.linkedin.com/in/austin-tran-57624a284/
+  linkedin: austin-tran-57624a284/
 
 topics:
   - name: Machine Learning
